<resources>
    <string name="app_name">Movie APP</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_playlist">ADD TO WATCHLIST</string>
    <string name="back">BACK</string>
    <string name="title_activity_show_playlist_tracks">ShowWatchlistTracks</string>
    <string name="title_activity_show_artist">ShowArtistActivity</string>
    <string name="rating">rating</string>
    <string name="PlayList">WATCHLIST</string>
    <string name="released_date">Released: 2019-04/16</string>
    <string name="showartpic">Show Artist Picture</string>

    <string name="name">Watchlist Name</string>
    <string name="disc">Watchlist Description</string>
    <string name="plgenre">Watchlist Genre</string>
    <string name="genre">Watchlist Rating (Positive Integer)</string>
    <string name="Submit">Submit</string>
    <string name="hint">Input the Watchlist Name to add to</string>
    <string name="search">Go</string>
    <string name="position">0</string>
    <string name="Add">Add</string>
    <string name="username">USERNAME: Username</string>
    <string name="email">EMAIL: xxx@xxx.com</string>
    <string name="ChangePwd">CHANGE PASSWORD</string>
    <string name="signout">Sign Out</string>
    <string name="inputEmail">Email Address</string>
    <string name="inputUsername">Username</string>
    <string name="inputPassword">Password</string>
    <string name="signupsubmit">Sign Up</string>
    <string name="loginsubmit">Log In</string>
    <string name="logout">LOGOUT</string>
    <string name="showUsername">Name: username</string>
    <string name="showLogin">LOGIN</string>
    <string name="showSignup">SIGN UP</string>
    <string name="cancel">CANCEL</string>
    <string name="changepassword">Change Password</string>
    <string name="title_activity_password">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="deletebutton">DELETE</string>
    <string name="thisispopupwindow">This is a popup window.</string>
    <string name="overview">OVERVIEW</string>
    <string name="seecomment"> SEE COMMENTS</string>
    <string name="commentrating">Comments</string>
</resources>