<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/inputplaylistname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="text" />

    <EditText
        android:id="@+id/inputplaylistdescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/disc"
        android:inputType="text" />

    <EditText
        android:id="@+id/inputplaylistgenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/plgenre"
        android:inputType="text" />

    <EditText
        android:id="@+id/inputplaylistrating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/genre"
        android:inputType="number" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/submitaddplaylist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Submit" />
    </RelativeLayout>

</LinearLayout>