<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.LoginFragment">

    <LinearLayout
        android:id="@+id/playerLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="25dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="horizontal" app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/showPlayerLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/showLogin"
            android:textSize="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/playerLogin"
        android:padding="10dp" >

        <!-- TODO: Update blank fragment layout -->
        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/inputEmail"
            android:inputType="text" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/inputPassword"
            android:inputType="textPassword" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/submitlogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginsubmit" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/submitchangepassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/changepassword"/>
        </RelativeLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>