<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="350dp"
        android:background="#96CC39"
        android:id="@+id/popup_linear"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_centerInParent="true"-->
<!--            android:layout_margin="30dp"-->
<!--            android:id="@+id/popup_overview_title"-->
<!--            android:textSize="22sp"-->
<!--            android:text="Overview"/>-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/popup_title"
            android:textSize="30sp"
            android:text="@string/overview"
            android:layout_marginLeft="100dp"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/popup_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/thisispopupwindow"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/popup_title" />

        <Button
            android:id="@+id/popup_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="200dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/popup_overview" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>