<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowTrackActivity">


    <TextView
        android:id="@+id/trackDetailName"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:gravity="center"
        android:text=""
        android:textSize="30sp"

        app:layout_constraintBottom_toTopOf="@+id/trackDetailImg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/trackDetailImg"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:gravity="center"

        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toBottomOf="@id/trackDetailName" />

    <TextView
        android:id="@+id/trackDetailArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/trackDetailTrackName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trackDetailImg" />

    <TextView
        android:id="@+id/trackDetailTrackName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/trackDetailPosition"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trackDetailArtist" />

    <TextView
        android:id="@+id/trackDetailPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/trackDetailLength"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trackDetailTrackName" />

    <TextView
        android:id="@+id/trackDetailLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:textSize="15sp"

        app:layout_constraintBottom_toTopOf="@+id/trackDetailRelease"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trackDetailPosition" />

    <TextView
        android:id="@+id/trackDetailRelease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/released_date"
        android:textSize="15sp"

        app:layout_constraintBottom_toTopOf="@+id/trackDetailRank"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trackDetailLength" />

    <TextView
        android:id="@+id/trackDetailRank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:textSize="15sp"

        app:layout_constraintBottom_toTopOf="@+id/add_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trackDetailRelease" />

    <Button
        android:id="@+id/show_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:onClick="showArtist"
        android:text="@string/showartpic"
        app:layout_constraintBottom_toBottomOf="@+id/trackDetailRank"
        app:layout_constraintBottom_toTopOf="@+id/add_playlist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/add_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:onClick="addToPlayList"
        android:text="@string/add_to_playlist"
        app:layout_constraintBottom_toBottomOf="@+id/show_artist"
        app:layout_constraintBottom_toTopOf="@+id/back_to_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/back_to_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="30dp"
        android:onClick="back"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>