<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowMovieActivity">


    <TextView
        android:id="@+id/movieDetailName"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:gravity="center"
        android:text=""
        android:textSize="30sp"

        app:layout_constraintBottom_toTopOf="@+id/movieDetailImg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/movieDetailImg"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:gravity="center"

        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toBottomOf="@id/movieDetailName" />

    <TextView
        android:id="@+id/movieDetailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/movieDetailReleaseDate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movieDetailImg" />

    <TextView
        android:id="@+id/movieDetailReleaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="overview"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/movieDetailOverview"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movieDetailTitle" />

    <TextView
        android:id="@+id/movieDetailOverview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/movieDetailLength"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieDetailReleaseDate" />

    <TextView
        android:id="@+id/movieDetailLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:textSize="15sp"

        app:layout_constraintBottom_toTopOf="+id/movieDetailRank"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieDetailOverview" />


    <TextView
        android:id="@+id/movieDetailRank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:textSize="15sp"

        app:layout_constraintBottom_toTopOf="@+id/movie_preview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieDetailLength" />
    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
        android:id="@+id/movie_preview"
        android:layout_width="160dp"
        android:layout_height="90dp"
        app:layout_constraintTop_toBottomOf="@+id/movieDetailRank"
        app:layout_constraintBottom_toTopOf="@+id/show_artist"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


    <Button
        android:id="@+id/show_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:onClick="showArtist"
        android:text="@string/showartpic"
        app:layout_constraintBottom_toBottomOf="@+id/movie_preview"
        app:layout_constraintBottom_toTopOf="@+id/add_playlist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/add_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:onClick="addToPlayList"
        android:text="@string/add_to_playlist"
        app:layout_constraintBottom_toBottomOf="@+id/show_artist"
        app:layout_constraintBottom_toTopOf="@+id/back_to_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/back_to_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="30dp"
        android:onClick="back"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>